force-app/main/default/objects/CustomNote__c/CustomNote__c.object-meta.xml
<CustomObject>
    <description>Objeto customizado para guardar as notas de um registro.</description>
    <label>Nota</label>
    <nameField>
        <displayFormat>NOT-{0000000000}</displayFormat>
        <label>Nota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>