force-app/main/default/objects/CustomNote__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ativo que estará relacionado a nota.</inlineHelpText>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Notas</relationshipLabel>
    <relationshipName>NotasXAsset</relationshipName>
    <type>Lookup</type>
</CustomField>