force-app/main/default/objects/CustomNote__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Digite aqui o texto desejado que irá compor a nota.</inlineHelpText>
    <label>Comentário</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>