force-app/main/default/objects/CustomNote__c/fields/Funcionalidade__c.field-meta.xml
<CustomField>
    <fullName>Funcionalidade__c</fullName>
    <inlineHelpText>Funcionalidade a qual a nota vai se referir</inlineHelpText>
    <label>Funcionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NoteFunctionality</valueSetName>
    </valueSet>
</CustomField>